syntax = "proto3";

package users;

import "google/protobuf/empty.proto";

option go_package = "internal/pb/users;userspb";

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
  int64  id       = 1;
  string email    = 2;
  string username = 3;
}

message CreateUserRequest {
  string email    = 1;
  string username = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserByIDRequest {
  int64  id       = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64  id       = 1;
  string email    = 2;
  string username = 3;
  string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64  id       = 1;
}